Client/k8s/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          # Route to Angular Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80

          # Route to User Service
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          # Route to Auth Service
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          # Route to Stream Service
          - path: /api/stream
            pathType: Prefix
            backend:
              service:
                name: stream-service
                port:
                  number: 80
          
          # Route to Analytics Service
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 80

          # Route to Recommendation Service
          - path: /api/recommendation
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 80
